# schedule24

./: Cargo.toml
src/: main.rs
src/stui/: mod.rs
