[package]
name = "schedule24"
version = "0.1.0"
edition = "2018"
authors = [ "NAHFE", "Not4x3l" ]
description = "Show the skola24 schedules in different ways"

[dependencies]
chrono = "0.4.19"
tui = { version = "0.16.*", default-features = false, features = [ "crossterm" ] }
crossterm = "0.22.*"
clap = "2.33.*"
substring = "1.4.*"
tokio = { version = "1.13", features = [ "full" ] }

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
confy = "0.4.0"

libschedule24 = { git = "https://github.com/NAHFE/libschedule24.git", features = ["svg"] }
